tests/paczka1/fuzzy1/73186838.err
Error in line 6: rrOlVJI S855 -2,9
Error in line 5: 6fzvT S874 31,7
Error in line 1: XChMgu S285 95,0
Error in line 8: 6fzvT S622 68,8
Error in line 3: zwBeTVr S622 68,2
Error in line 31: 1FUvA S874 83,06
Error in line 32: S855 S285 40,9
Error in line 33: S855 S855 38,1
Error in line 35: 1FUvA S874 165,5
